--- a/.github/workflows/ort.yml
+++ b/.github/workflows/ort.yml
@@ -25,6 +25,7 @@ on:
   push:
     branches:
       - master
+      - fix-up-ort-github-action-workflow
   pull_request:
     branches:
       - master
@@ -38,4 +39,3 @@ jobs:
         with:
           ort-cli-args: '-P ort.enableRepositoryPackageCurations=true'
           allow-dynamic-versions: 'true'
-          fail-on: 'violations'
