--- a/.ort.yml
+++ b/.ort.yml
@@ -19,9 +19,42 @@
 # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
+
+# See https://oss-review-toolkit.org/ort/docs/configuration/ort-yml for file specification
 ---
 curations:
   packages:
   - id: "Maven:edu.berkeley.cs.jqf:jqf-fuzz:2.0"
     curations:
-      comment: "They have FreeBSD license, but it's not properly formatted"
+      comment: |-
+        Set the VCS path of the module inside the multi-module repository.
+      vcs:
+        path: "fuzz"
+  - id: "Maven:edu.berkeley.cs.jqf:jqf-fuzz:2.0"
+    curations:
+      comment: |-
+        Mapped based on https://github.com/rohanpadhye/JQF/blob/jqf-2.0/LICENSE.
+      declared_license_mapping:
+        "FreeBSD License": "BSD-2-Clause"
+  - id: "Maven:edu.berkeley.cs.jqf:jqf-instrument:2.0"
+    curations:
+      comment: |-
+        "Mapped based on https://github.com/rohanpadhye/JQF/blob/jqf-2.0/LICENSE."
+      declared_license_mapping:
+        "FreeBSD License": "BSD-2-Clause"
+  - id: "Maven:edu.berkeley.cs.jqf:jqf-instrument:2.0"
+    curations:
+      comment: |-
+        Set the VCS path of the module inside the multi-module repository.
+      vcs:
+        path: "instrument"
+license_choices:
+  package_license_choices:
+  - package_id: "Maven:org.glassfish:javax.json:1.1.4"
+    license_choices:
+    - given: CDDL-1.1 OR GPL-2.0-only
+      choice: CDDL-1.1
+  - package_id: "Maven:javax.json:javax.json-api:1.1.4"
+    license_choices:
+      - given: CDDL-1.1 OR GPL-2.0-only
+        choice: CDDL-1.1
